# zeppuku

./: .dockerignore  Dockerfile.base  pyproject.toml
agents/: feature-dev-workflow-orchestrator.md
ai_configs/claude/: CLAUDE.md  settings.json  settings.local.json
ai_configs/claude/memory/: MEMORY.md
ai_configs/cursor/: cli-config.json
mcp/ai-datastore/: Dockerfile  README.md  pyproject.toml
mcp/ai-datastore/src/aethier_mcp_ai_datastore/: db.py  filesystem.py  models.py  repository.py  search_dsl.py  server.py  service.py  validators.py
mcp/confluence/: Dockerfile  README.md  pyproject.toml
mcp/confluence/src/aethier_mcp_confluence/: server.py
mcp/host-poc/: Dockerfile  README.md  pyproject.toml
mcp/host-poc/src/aethier_mcp_host_poc/: server.py
mcp/jenkins/: Dockerfile  README.md  pyproject.toml
mcp/jenkins/src/aethier_mcp_jenkins/: server.py
mcp/jira/: Dockerfile  README.md  pyproject.toml
mcp/jira/src/aethier_mcp_jira/: server.py
mcp/lib/: README.md  pyproject.toml
mcp/lib/src/csvq_adapter/: __init__.py  adapter.py
mcp/lib/tests/: test_csvq_adapter.py
mcp/slack/: Dockerfile  README.md  pyproject.toml
mcp/slack-dev/: Dockerfile  README.md  pyproject.toml
mcp/slack-dev/src/aethier_mcp_slack/: server.py
mcp/slack/src/aethier_mcp_slack/: server.py
mcp/usage/: Dockerfile  README.md  pyproject.toml
mcp/usage/src/aethier_mcp_usage/: server.py  usage.yaml
mcp/workflow-state/: Dockerfile  README.md  pyproject.toml
mcp/workflow-state/src/aethier_mcp_workflow_state/: repository.py  server.py  service.py  validators.py
mcp/workflow-state/tests/: test_repository.py  test_service.py  test_validators.py
rules/: default-output-directory.mdc  no-backwards-compat-by-default.mdc  read-cws-claude-md.mdc  slack-bot.mdc
skills/use-ai-datastore/: SKILL.md  examples.md
skills/use-workflow-state/: SKILL.md  state-agent-guidance.md
