[project]
name = "aethier-mcp-confluence"
version = "0.1.0"
description = "Read-only MCP server for Atlassian Confluence Cloud via REST API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["aethier-mcp-core", "httpx>=0.27"]
authors = [{ name = "aethier" }]

[project.scripts]
aethier-mcp-confluence = "aethier_mcp_confluence.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aethier_mcp_confluence"]

[tool.uv.sources]
aethier-mcp-core = { workspace = true }
