[project]
name = "aethier-mcp-host-poc"
version = "0.1.0"
description = "MCP server with proof-of-concept host tools (ls, env) over the bridge."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["aethier-mcp-core"]
authors = [{ name = "aethier" }]

[project.scripts]
aethier-mcp-host-poc = "aethier_mcp_host_poc.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aethier_mcp_host_poc"]

[tool.uv.sources]
aethier-mcp-core = { workspace = true }
