[project]
name = "aethier-mcp-jenkins"
version = "0.1.0"
description = "Read-only MCP server for a Jenkins dashboard via REST API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["aethier-mcp-core", "httpx>=0.27"]
authors = [{ name = "aethier" }]

[project.scripts]
aethier-mcp-jenkins = "aethier_mcp_jenkins.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aethier_mcp_jenkins"]

[tool.uv.sources]
aethier-mcp-core = { workspace = true }
