[project]
name = "aethier-mcp-lib"
version = "0.1.0"
description = "Shared helpers for MCP servers in the mcp/ workspace."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["aethier-mcp-core"]
authors = [{ name = "aethier" }]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/csvq_adapter"]

[tool.uv.sources]
aethier-mcp-core = { workspace = true }
