[project]
name = "aethier-mcp-slack-dev"
version = "0.1.0"
description = "MCP server for posting to Slack and reading channel history."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["aethier-mcp-core", "httpx>=0.27"]
authors = [{ name = "aethier" }]

[project.scripts]
aethier-mcp-slack-dev = "aethier_mcp_slack.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aethier_mcp_slack"]

[tool.uv.sources]
aethier-mcp-core = { workspace = true }
