[project]
name = "aethier-mcp-usage"
version = "0.1.0"
description = "MCP server providing detailed usage instructions for tools across other MCP servers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["aethier-mcp-core", "pyyaml"]
authors = [{ name = "aethier" }]

[project.scripts]
aethier-mcp-usage = "aethier_mcp_usage.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aethier_mcp_usage"]

[tool.uv.sources]
aethier-mcp-core = { workspace = true }
